core/b2b/core-services/metabase/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metabase
  labels:
    name: metabase
    managed-by: ka0s-core-cd
