core/b2b/core-services/metabase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: metabase
  labels:
    app: metabase
spec:
  selector:
    app: metabase
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
